# routes/api.php
@@ -41,3 +41,8 @@ Route::get('/getHomeData', [HomePageController::class, 'getHomeData']);
 Route::get('/getCategoriesData', [HomePageController::class, 'getCategoriesData']);
 Route::get('/getAllProductData', [HomePageController::class, 'getAllProductData']);
 Route::post('/getCategoryData', [HomePageController::class, 'getCategoryData']);
+Route::get('/getProductData/{item_code}/{slug}', [HomePageController::class, 'getProductData']);
+Route::post('/getUserData', [HomePageController::class, 'getUserData']);
+Route::post('/getCartData', [HomePageController::class, 'getCartData']);
+Route::post('/addToCart', [HomePageController::class, 'addToCart']);
+Route::post('/removeCartData', [HomePageController::class, 'removeCartData']);
